[metadata]
name = indico-plugin-jacow
version = 3.3
description = Indico plugin with JACoW-specific functionality
url = https://gitlab.cern.ch/indico/indico-plugin-jacow
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.12.2, <3.13
install_requires =
    indico>=3.3.dev0

[options.entry_points]
indico.plugins =
    jacow = indico_jacow.plugin:JACOWPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
